<resources>
    <string name="app_name">Partial Mobile App</string>
    <string name="main_title">Partial Mobile App</string>
    <string name="web_site">www.uninorte.edu.co</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Mobile Programming</string>
    <string name="nav_header_subtitle">www.uninorte.edu.co</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="regiter_title">Register</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="re_password">Confirm password</string>
    <string name="button_register">Register</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
